--- a/app/src/main/res/layout/fragment_carrito.xml
+++ b/app/src/main/res/layout/fragment_carrito.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".FragmentCarrito"
+    android:background="#f8f8ff"
   >
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -15,14 +16,15 @@
             android:id="@+id/textView3"
             android:layout_width="match_parent"
             android:layout_height="50dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:background="@drawable/search_edittext_background"
+            android:elevation="3dp"
             android:gravity="center"
             android:text="Carrito"
-            android:layout_marginRight="10dp"
-            android:layout_marginLeft="10dp"
-            android:textSize="20sp"
             android:textColor="@color/textColorPrimary2"
-            android:elevation="3dp"
+            android:textSize="20sp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.521"
@@ -35,7 +37,7 @@
             android:id="@+id/linearLayout2"
             android:layout_width="match_parent"
             android:layout_height="280dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginEnd="14dp"
             android:orientation="horizontal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -64,7 +66,7 @@
             android:background="@drawable/btn_borrar"
             android:drawableStart="@drawable/borrar2"
             android:drawablePadding="8dp"
-            android:gravity="center"
+            android:gravity=""
             android:padding="8dp"
             android:paddingStart="16dp"
             android:paddingEnd="16dp"
@@ -96,14 +98,29 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
+                <LinearLayout
+
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:background="@drawable/raya"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.473"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.443"></LinearLayout>
+
                 <TextView
                     android:id="@+id/txt_descuento_carrito"
                     android:layout_width="100dp"
                     android:layout_height="20dp"
-                    android:text="Total"
                     android:layout_marginRight="22dp"
+                    android:text="Total"
                     android:textAlignment="viewEnd"
                     android:textColor="@color/textColorPrimary2"
+                    android:textSize="15sp"
                     app:layout_constraintBottom_toTopOf="@+id/txt_total_carrito"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="1.0"
@@ -115,8 +132,10 @@
                     android:id="@+id/textView12"
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
                     android:text="Descuento"
                     android:textColor="@color/textColorPrimary2"
+                    android:textSize="15sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.128"
                     app:layout_constraintStart_toStartOf="parent"
@@ -129,6 +148,7 @@
                     android:text="Total"
                     android:textColor="#00b347"
                     android:textSize="24sp"
+                    android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.123"
@@ -140,11 +160,13 @@
                     android:id="@+id/txt_total_carrito"
                     android:layout_width="150dp"
                     android:layout_height="40dp"
+                    android:layout_marginRight="20dp"
                     android:text="Sub Total"
                     android:textAlignment="viewEnd"
                     android:textColor="#00b347"
+
                     android:textSize="24sp"
-                    android:layout_marginRight="20dp"
+                    android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="1.0"
@@ -158,22 +180,24 @@
                     android:layout_height="wrap_content"
                     android:text="Sub Total"
                     android:textColor="@color/textColorPrimary2"
+                    android:textSize="15sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.113"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.258" />
+                    app:layout_constraintVertical_bias="0.19999999" />
 
                 <TextView
                     android:id="@+id/txt_sub_total_carrito"
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
-                    android:text="TextView"
-
                     android:layout_marginRight="20dp"
+
+                    android:text="TextView"
                     android:textAlignment="viewEnd"
                     android:textColor="@color/textColorPrimary2"
+                    android:textSize="15sp"
                     app:layout_constraintBottom_toTopOf="@+id/txt_total_carrito"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="1.0"
