--- a/app/src/main/res/layout/fragment_detalle_pedido.xml
+++ b/app/src/main/res/layout/fragment_detalle_pedido.xml
@@ -537,7 +537,7 @@
                         android:layout_height="90dp"
                         android:layout_gravity="center"
                         android:layout_marginLeft="10dp"
-                        android:layout_marginTop="10dp"
+                        android:layout_marginTop="15dp"
                         android:layout_marginRight="10dp"
                         app:cardCornerRadius="25dp"
                         app:cardElevation="1dp"
@@ -557,7 +557,6 @@
                                 android:paddingTop="10dp"
                                 android:paddingRight="30dp"
                                 android:visibility="gone"
-                                android:background="#808080"
                                 app:layout_constraintBottom_toBottomOf="parent"
                                 app:layout_constraintEnd_toEndOf="parent"
                                 app:layout_constraintStart_toStartOf="parent"
@@ -570,11 +569,10 @@
                                 android:layout_width="28dp"
                                 android:layout_height="28dp"
                                 android:layout_marginTop="30dp"
+                                android:layout_marginEnd="16dp"
                                 android:src="@drawable/exclamacion"
                                 android:visibility="gone"
                                 app:layout_constraintEnd_toStartOf="@+id/imageView4"
-                                app:layout_constraintHorizontal_bias="0.809"
-                                app:layout_constraintStart_toEndOf="@+id/textView62"
                                 app:layout_constraintTop_toTopOf="parent" />
 
                             <ImageView
@@ -613,7 +611,8 @@
                                 android:id="@+id/check4"
                                 android:layout_width="35dp"
                                 android:layout_height="35dp"
-                                android:layout_marginTop="30dp"
+                                android:layout_marginTop="28dp"
+                                android:layout_marginEnd="16dp"
                                 android:src="@drawable/comprobado_adobe_express"
                                 android:visibility="gone"
                                 app:layout_constraintEnd_toStartOf="@+id/imageView4"
@@ -711,17 +710,17 @@
                                 android:layout_width="28dp"
                                 android:layout_height="28dp"
                                 android:layout_marginTop="32dp"
+                                android:layout_marginEnd="16dp"
                                 android:src="@drawable/exclamacion"
                                 android:visibility="gone"
                                 app:layout_constraintEnd_toStartOf="@+id/imageView5"
-                                app:layout_constraintHorizontal_bias="0.805"
-                                app:layout_constraintStart_toEndOf="@+id/textView65"
                                 app:layout_constraintTop_toTopOf="parent" />
 
                             <ImageView
                                 android:id="@+id/check5"
                                 android:layout_width="35dp"
                                 android:layout_height="35dp"
+                                android:layout_marginEnd="16dp"
                                 android:src="@drawable/comprobado_adobe_express"
                                 android:visibility="gone"
                                 app:layout_constraintBottom_toBottomOf="parent"
