--- a/app/src/main/res/layout/fragment_mapa.xml
+++ b/app/src/main/res/layout/fragment_mapa.xml
@@ -14,7 +14,8 @@
         android:layout_marginTop="0dp"
         app:cardCornerRadius="25dp"
         app:cardElevation="5dp"
-        app:cardUseCompatPadding="true">
+        app:cardUseCompatPadding="true"
+      >
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -292,29 +293,30 @@
                             <RadioGroup
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
-                                android:orientation="horizontal">
+                                android:orientation="horizontal"
+                                android:layout_marginLeft="10dp">
 
                                 <RadioButton
-                                    android:id="@+id/radioButton5"
-                                    android:layout_width="60dp"
+                                    android:id="@+id/radio0"
+                                    android:layout_width="50dp"
                                     android:layout_height="wrap_content"
                                     android:button="@drawable/casa" />
 
                                 <RadioButton
-                                    android:id="@+id/radioButton4"
-                                    android:layout_width="60dp"
+                                    android:id="@+id/radio1"
+                                    android:layout_width="50dp"
                                     android:layout_height="wrap_content"
                                     android:button="@drawable/corazon" />
 
                                 <RadioButton
-                                    android:id="@+id/radioButton3"
-                                    android:layout_width="60dp"
+                                    android:id="@+id/radio2"
+                                    android:layout_width="50dp"
                                     android:layout_height="wrap_content"
                                     android:button="@drawable/maleta" />
 
                                 <RadioButton
-                                    android:id="@+id/radioButton2"
-                                    android:layout_width="60dp"
+                                    android:id="@+id/radio3"
+                                    android:layout_width="50dp"
                                     android:layout_height="wrap_content"
                                     android:button="@drawable/etiqueta" />
                             </RadioGroup>
