--- a/app/src/main/res/layout/item_direcciones.xml
+++ b/app/src/main/res/layout/item_direcciones.xml
@@ -25,7 +25,7 @@
 
         <LinearLayout
             android:id="@+id/linear_menu"
-            android:layout_width="55dp"
+            android:layout_width="65dp"
             android:layout_height="35dp"
             android:orientation="horizontal"
             android:visibility="gone"
@@ -54,6 +54,7 @@
                 android:id="@+id/botton_borrar_menu"
                 android:layout_width="25dp"
                 android:layout_height="35dp"
+                android:layout_marginLeft="5dp"
                 android:src="@drawable/borrar"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -66,15 +67,13 @@
 
         <ImageView
             android:id="@+id/imagen_direccion"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_marginStart="4dp"
-            android:layout_marginTop="5dp"
             android:scaleType="centerInside"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.8"
             tools:srcCompat="@drawable/casa" />
 
         <TextView
@@ -102,7 +101,8 @@
             android:lines="2"
             android:minLines="2"
             android:text="TextViewjsjsjsjsjjsjjsjssjjsjsjsjhdbhdbdhbdhbddhbdhdbhdbhbdhdbhdbdhbdjdnjdndj"
-            android:textSize="11sp"
+            android:textSize="12sp"
+            android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.305"
