--- a/app/src/main/res/layout/layout_botton_sheet.xml
+++ b/app/src/main/res/layout/layout_botton_sheet.xml
@@ -22,42 +22,47 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="10dp">
+        android:padding="10dp"
+        android:visibility="visible">
 
         <TextView
             android:id="@+id/txt_nombre_usu_ubi"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
             android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
             android:text="Hola Negro"></TextView>
 
         <androidx.appcompat.widget.AppCompatTextView
             android:layout_width="250dp"
             android:layout_height="30dp"
-android:textColor="@color/black"
+            android:layout_marginLeft="10dp"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
-            android:layout_marginLeft="10dp"
             android:text="¿A dónde enviamos tu pedido?"
+            android:textColor="@color/black"
             android:textStyle="bold"></androidx.appcompat.widget.AppCompatTextView>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/contenedorUbicaciones"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:focusableInTouchMode="true"
             android:orientation="horizontal"
-            tools:listitem="@layout/item_direcciones"
-            android:focusableInTouchMode="true"/>
+            tools:listitem="@layout/item_direcciones" />
 
     </LinearLayout>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnUbi"
-        android:layout_width="400dp"
+        android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:paddingLeft="10dp"
         android:layout_marginBottom="20dp"
-        android:background="@drawable/search_edittext_background"
+        android:background="#f8f8ff"
+        android:paddingTop="10dp"
         android:text="Añadir nueva dirección"
         android:textColor="@color/pinkColor"
         android:textSize="15sp"
