--- a/app/src/main/res/layout/item_datosfactura.xml
+++ b/app/src/main/res/layout/item_datosfactura.xml
@@ -11,33 +11,29 @@
     app:cardCornerRadius="18dp"
     android:paddingRight="5dp"
     android:paddingLeft="5dp"
-    app:cardUseCompatPadding="true">
+    app:cardUseCompatPadding="false">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="300dp"
-        android:layout_height="100dp"
-        android:background="#00F6FBF7"
-        android:paddingStart="14dp"
-        android:paddingEnd="4dp"
-        android:paddingLeft="5dp"
-        android:paddingBottom="15dp"
+
 
         >
 
-
-        <RadioGroup
-            android:id="@+id/group_factura"
+        <ScrollView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_height="wrap_content">
 
-            android:layout_marginBottom="15dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.03"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            <RadioGroup
+                android:id="@+id/group_factura"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+                android:orientation="vertical"
+
+                >
+
+
+
+            </RadioGroup>
+        </ScrollView>
+
 
 </LinearLayout>
