--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -3,38 +3,22 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cardView"
-    android:layout_width="300dp"
-
+    android:layout_width="340dp"
     android:layout_height="150dp"
-    android:layout_marginTop="2dp"
-    android:layout_marginBottom="1dp"
     app:cardCornerRadius="18dp"
-    app:cardElevation="5dp"
     app:cardUseCompatPadding="true">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="300dp"
 
-        android:layout_height="150dp"
-
-
-        >
 
 
         <ImageView
             android:id="@+id/imagen_layout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="10dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.228"
+            android:layout_width="340dp"
+            android:layout_height="150dp"
+
+            android:scaleType="fitXY"
             tools:srcCompat="@tools:sample/avatars" />
 
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
