--- a/app/src/main/res/layout/menu_promo.xml
+++ b/app/src/main/res/layout/menu_promo.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cardView"
     android:layout_width="340dp"
-    android:layout_height="wrap_content"
+    android:layout_height="200dp"
     android:layout_marginTop="2dp"
     android:layout_marginBottom="1dp"
     app:cardCornerRadius="18dp"
@@ -14,7 +14,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="340dp"
 
-        android:layout_height="250dp"
+        android:layout_height="200dp"
         android:background="@drawable/fondo_promo"
         android:paddingStart="14dp"
         android:paddingEnd="4dp"
@@ -25,9 +25,10 @@
 
         <ImageView
             android:id="@+id/imagen_promo"
-            android:layout_width="170dp"
-            android:layout_height="190dp"
+            android:layout_width="160dp"
+            android:layout_height="match_parent"
             android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
